<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.4</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>br.com.impacta</groupId>
	<artifactId>boacao</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>boacao</name>
	<description>Boacao</description>
	<url />
	<!-- Licença do projeto (MIT) -->
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
			<comments>Licença MIT para software de código aberto</comments>
		</license>
	</licenses>
	<!-- Informações sobre os desenvolvedores -->
	<developers>
		<developer>
			<name>Guilherme Thurler dos Santos</name>
			<email>guilherme.thurler@aluno.faculdadeimpacta.com.br</email>
			<roles>
				<role>Fullstack Developer</role>
			</roles>
		</developer>
		<developer>
			<name>Hideyuki Terres Takahashi</name>
			<email>hideyuki.takahashi@aluno.faculdadeimpacta.com.br</email>
			<roles>
				<role>Fullstack Developer</role>
			</roles>
		</developer>
		<developer>
			<name>Lucas Camacho</name>
			<email>lucas.camacho@aluno.faculdadeimpacta.com.br</email>
			<roles>
				<role>Fullstack Developer</role>
			</roles>
		</developer>
		<developer>
			<name>Mariana Zanardi</name>
			<email>mariana.zanardi@aluno.faculdadeimpacta.com.br</email>
			<roles>
				<role>Fullstack Developer</role>
			</roles>
		</developer>
		<developer>
			<name>Paolo Guilherme Gaspar Martos</name>
			<email>paolo.martos@aluno.faculdadeimpacta.com.br</email>
			<roles>
				<role>Fullstack Developer</role>
			</roles>
		</developer>
	</developers>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>

		<!-- ========== CORE ========== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- ========== BANCO DE DADOS ========== -->
		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- ========== SEGURANÇA ========== -->
		<!-- Gera e emite tokens JWT para o cliente -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-oauth2-authorization-server</artifactId>
		</dependency>
		<!-- Valida Tokens JWT enviado pelo cliente -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>

		<!-- ========== DOCUMENTAÇÃO ========== -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.8.6</version>
		</dependency>

		<!-- ========== TESTES ========== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- ========== FERRAMENTAS ========== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<!-- ========== TEST COVERAGE ========== -->
			<!-- Mostra a porcentagem de código testado em cada pacote e classe -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.10</version>
				<configuration>
					<excludes>
						<exclude>br/com/impacta/boacao/BoacaoApplication.class</exclude>
						<exclude>br/com/impacta/boacao/config/**</exclude>
						<exclude>br/com/impacta/boacao/dto/**</exclude>
						<exclude>br/com/impacta/boacao/exception/**</exclude>
						<exclude>br/com/impacta/boacao/entity/**</exclude>
						<exclude>br/com/impacta/boacao/mapper/**</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<outputDirectory>target/jacoco-report</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>